Fix search icon alignment in header

--- a/styles/components/navMenu.less
+++ b/styles/components/navMenu.less
@@ -116,6 +116,6 @@
 @media (min-width: @break-xl) {
 
 	.navMenu {
-		margin-right: 14rem;
+		margin-right: 15rem;
 	}
 }
