--- a/styles/components/siteHeader.less
+++ b/styles/components/siteHeader.less
@@ -151,10 +151,15 @@ body {
 		transform: translateY(-50%);
 		padding: 0;
 		border: none;
+
+		.fa {
+			left: 1rem;
+		}
 	}
 
 	.siteHeader__searchInput {
-		width: 8rem;
+		width: 9rem;
+		padding-left: 2.5rem;
 	}
 
 	.siteHeader__about {
@@ -168,11 +173,6 @@ body {
 
 	.siteHeader__logo {
 		float: left;
-		width: 320px;
-
-		img {
-			width: 272px;
-		}
 	}
 
 	.siteHeader__topBar {
